--- a/.github/workflows/main_app-backend-g5ftaef37pkbq.yml
+++ b/.github/workflows/main_app-backend-g5ftaef37pkbq.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python version
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v3
         with:
           python-version: '3.10'
 
@@ -28,7 +28,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r scripts/requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
